:bug: Fix titles in viewer thumbnails too long

--- a/frontend/resources/styles/main/partials/viewer-thumbnails.scss
+++ b/frontend/resources/styles/main/partials/viewer-thumbnails.scss
@@ -165,6 +165,10 @@
 
   .thumbnail-info {
     padding: 0.5rem 0;
+    width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     span {
       font-size: $fs13;
